<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="key" tools:ignore="TypographyDashes">HERE YOUR API KEY</string>
    <string name="url">https://api.royaleapi.com/</string>

    <string name="app_name">CR - Clan Management</string>
    <string name="app_search_clan">Search New Clan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Order By</string>
    <string name="imgClanDesc">Clan Badge</string>

    <!-- Navigation Menu -->
    <string name="nav_information">Information</string>
    <string name="nav_about">About</string>
    <string name="nav_search">Search a new Clan</string>
    <string name="nav_statistics">Statistics - Soon</string>
    <string name="nav_home">Main Page</string>

    <!-- Start activity -->
    <string name="txtSearchClan">Search a Clan:</string>
    <string name="txtHint">RY8JVV</string>
    <string name="btnGetClan">Get Clan</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="clanNotWarLog">Clan does not have a War log yet, getting members…</string>
    <string name="errorClan">Clan maybe does not exist, try again.</string>

    <!-- MainActivity -->
    <string name="refreshData">Refreshing data…</string>
    <string name="error">Error, try again.</string>
    <string name="clanWarLog">Clan does not have a War log yet.</string>}
    <string name="exitTitle">Do you want to exit?</string>
    <string name="exitConfirm">Yes</string>
    <string name="exitCancel">Cancel</string>
    <string name="orderTitle">Order list by:</string>
    <array name="orderBy">
        <item>Trophies</item>
        <item>Skipped Wars</item>
        <item>Donations</item>
    </array>
    <string name="updated">Members are up to date.</string>

    <!-- RecyclerView_item -->
    <string name="imgIconDesc">Logo</string>
    <string name="txtPlayer">Player</string>
    <string name="txtTag">Tag</string>
    <string name="txtRole">Role</string>
    <string name="txtTrophies">Trophies: </string>
    <string name="txtDonations">/Week</string>
    <string name="txtFails">Skipped Wars: </string>
    <!-- PlayerListAdapter -->
    <string name="leader">Leader</string>
    <string name="coLeader">Co-Leader</string>
    <string name="elder">Elder</string>
    <string name="member">Member</string>
    <string name="noPlayers">No Players</string>

    <!-- Slider Intro -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--AboutActivity-->
    <string name="glideURL"><a href="https://github.com/bumptech/glide">Glide</a></string>
    <string name="tooltipURL"><a href="https://github.com/douglasjunior/android-simple-tooltip">Android Simple Tooltip</a></string>
    <string name="app_version">Version: 1.0.0</string>
    <string name="libraries">Open Source Libraries</string>
    <string name="contact">Contact Information</string>
    <string name="developer">Developer: <a href="https://github.com/Bahamut1797">Jorge Ruiz</a></string>

    <!--SearchClanActivity-->
    <string name="loadClan">Do you want to load the clan \"</string>
    <string name="deleteClan">Do you want to delete the clan \"</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="loadCancel">Cancel</string>
    <string name="current">Current Clan:</string>
    <string name="savedClans">Saved clans:</string>
</resources>
