<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_data_usage_black_24dp"
            android:title="@string/nav_statistics" />
        <item android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_search" />
    </group>

    <item android:title="@string/nav_information">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_24dp"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
