<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="290dp"
    android:background="@drawable/normal_grad"
    android:orientation="vertical"
    tools:context=".activities.AboutActivity">

    <ImageButton
        android:id="@+id/btn_close_about"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/btn_close"
        android:elevation="2dp"
        android:src="@drawable/ic_close_24dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="@string/app_version"
        android:textSize="15sp" />

    <View
        android:layout_width="280dp"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="start"
                android:text="@string/contact"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDeveloper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/github_mark_light_32px"
                android:drawablePadding="6dp"
                android:text="@string/developer"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="start"
                android:text="@string/libraries"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/glide_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/github_mark_light_32px"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/glideURL"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tooltip_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/github_mark_light_32px"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:text="@string/tooltipURL"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>