<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        card_view:cardElevation="6dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardMaxElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/normal_grad"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/txtSearchClan" />

            <EditText
                tools:ignore="AutoFill"
                android:id="@+id/txtClanTag"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/txtHint"
                android:ems="10"
                android:inputType="textCapCharacters" />

            <Button
                android:id="@+id/btnGetClan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/btnGetClan" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>