<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/main_bg"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        tools:ignore="UseCompoundDrawables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/clanBadge"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/imgClanDesc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/clanName"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />
    </LinearLayout>


    <TextView
        android:id="@+id/clanDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

</LinearLayout>
