<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SearchClanActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="6dp"
        card_view:cardMaxElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/normal_grad"
            android:orientation="vertical"
            android:padding="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSearchClan"
                    android:textSize="22sp"
                    android:focusable="false"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtSearchClanTag"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/txtHint"
                    android:inputType="textCapCharacters"
                    tools:ignore="AutoFill" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnGetSearchClan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnGetClan" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:background="@android:color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savedClans"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:id="@+id/rv_searchclan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/precaution_grad"
                tools:listitem="@layout/recyclerview_item_clans" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>