<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/rv_clancard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="6dp"
        card_view:cardMaxElevation="8dp">


        <LinearLayout
            android:id="@+id/rv_clanlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_grad"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rv_iconclansearch"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/imgIconDesc"
                android:paddingTop="3dp"
                android:paddingBottom="3dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rv_clanname"
                    style="@style/word_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPlayer"
                    android:textColor="#FFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rv_clantag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/txtTag"
                        android:textColor="#FFF"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/rv_clanwartime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>