<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        card_view:cardElevation="6dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardMaxElevation="8dp">

        <LinearLayout
            android:id="@+id/rc_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/normal_grad"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/rv_iconclan"
                    android:contentDescription="@string/imgIconDesc"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:paddingTop="6dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rv_playername"
                        style="@style/player_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtPlayer"
                        android:textColor="#FFF"/>

                    <TextView
                        android:id="@+id/rv_playertag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtTag"
                        android:textColor="#FFF"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/rv_playerrole"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtRole"
                        android:textColor="#FFF"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginTop="6dp">

                    <TextView
                        android:id="@+id/rv_rank"
                        android:layout_width="32dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="6dp"
                        android:background="@drawable/nth_place"
                        android:elevation="6dp"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="start|center_vertical">

                    <LinearLayout
                        tools:ignore="UseCompoundDrawables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            tools:ignore="ContentDescription"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/trophy"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="6dp"/>

                        <TextView
                            android:id="@+id/rv_playertrophies"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFF"
                            android:background="@drawable/trophy_donation_box"
                            android:layout_marginStart="6dp"
                            android:padding="3dp"
                            android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                        tools:ignore="UseCompoundDrawables"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <ImageView
                            tools:ignore="ContentDescription"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/cards"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="6dp"/>

                        <TextView
                            android:id="@+id/rv_playerdonations"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFF"
                            android:background="@drawable/trophy_donation_box"
                            android:layout_marginStart="6dp"
                            android:padding="3dp"
                            android:textSize="18sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFF"
                            android:text="@string/txtDonations"
                            android:layout_marginStart="2dp"
                            android:textSize="18sp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom|end">

                    <TextView
                        android:id="@+id/rv_playerfails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtFails"
                        android:textColor="#FFF"
                        android:textSize="18sp"
                        android:paddingRight="8dp"
                        android:paddingLeft="8dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/fail_1"
                            tools:ignore="ContentDescription"
                            android:layout_width="25dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/fail_box"/>

                        <ImageView
                            android:id="@+id/fail_2"
                            tools:ignore="ContentDescription"
                            android:layout_width="25dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/fail_box"/>

                        <ImageView
                            android:id="@+id/fail_3"
                            tools:ignore="ContentDescription"
                            android:layout_width="25dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/fail_box"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>